# AiFinalProject

./: .gitignore  README.md  lib.py  main.py  projectCPU.ipynb  pyproject.toml  requirements.txt
